# ai

./: .gitignore  agent_factory.py  config.py  main.py  pyproject.toml  rag.py
agents/: __init__.py  orchestrator.py  python_sandbox_engineer.py
managers/: char_chat.py  chat.py  neo4j_db.py  neo4j_graph.py  supabase.py
models/: chat.py
routers/: char_chat.py  chat.py  supabase.py  test.py
schemas/: supabase.py
tools/: __init__.py  python_sandbox.py  web_search.py
